fixed some collapsing containers

--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@
       flex-wrap: wrap;
 }
 
-.credPart {
-  margin: auto;
+.credPart, .selPart {
+  margin: 1px auto 0px auto;
+  overflow: hidden;
   text-align: center;
 }
 
